added social media icons to nav bar using font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
     <!-- Materialize Icons -->
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
+    <!-- CSS Style Sheet -->
+    <link rel="stylesheet" href="./index.css" >
 
     <title>sjj</title>
   </head>
