--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <!-- Index.js -->
+    <script type="text/javascript" src="index.js"></script>
     
   </body>
 </html>
