--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-    <!-- Roboto Font, Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <!-- NANUM, Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic|Nanum+Gothic+Coding|Nanum+Pen+Script|Open+Sans" rel="stylesheet">
    
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
@@ -24,7 +24,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 
     <!-- CSS Style Sheet -->
-    <link rel="stylesheet" href="./index.css" >
+    <link rel="stylesheet" href="index.css" >
 
     <title>sjj</title>
   </head>
